src/objects/Merchandise1__c/Merchandise1__c.object-meta.xml
<CustomObject>
    <label>Merchandise1</label>
    <nameField>
        <label>Merchandise1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchandises1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>