src/objects/Merchandise1__c/fields/Merchandise_Price__c.field-meta.xml
<CustomField>
    <fullName>Merchandise_Price__c</fullName>
    <label>Merchandise Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>